# fog

./: .gitignore  Cargo.toml  README.md  note  output.ll  rustfmt.toml  sample.f  szia.txt  test.f
.cargo/: config.toml
.github/workflows/: mdbook.yml
benchmark/: Cargo.toml
benchmark/benches/: benchmark_input.f  my_benchmark.rs
config_test/: config.toml
config_test/src/: main.f
crates/codegen/: Cargo.toml  input_ir.dbg
crates/codegen/src/: allocate.rs  debug.rs  irgen.rs  lib.rs  pointer.rs
crates/common/: Cargo.toml
crates/common/src/: codegen.rs  lib.rs  parser.rs  pkg_mngr.rs  tokenizer.rs  ty.rs
crates/common/src/error/: application.rs  cliparser.rs  codegen.rs  parser.rs  syntax.rs
crates/compiler/src/: lib.rs
crates/error/: Cargo.toml
crates/fog/: Cargo.toml
crates/fog/src/: cli.rs  main.rs
crates/frontend/: Cargo.toml
crates/linker/: Cargo.toml
crates/package_mgr/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  parser_instance.rs  tokenizer.rs
crates/parser/src/parser/: function.rs  variable.rs
crates/pkg_mngr/: Cargo.toml
defaults/: default_code.f
dependency-manager/: Cargo.toml
dependency-manager/backend/: Cargo.toml
dependency-manager/backend/migrations/2025-12-02-151135-0000_dependencies/: down.sql  up.sql
dependency-manager/backend/src/: lib.rs  main.rs  models.rs  schema.rs
dependency-manager/backend/src/api/: manager.rs
dependency-manager/frontend/: Cargo.toml
dependency-manager/frontend/assets/: main.css
dependency-manager/frontend/src/: main.rs
dependency-manager/frontend/src/ui/: root.rs
dependency-manager/src/: lib.rs  main.rs  models.rs
dependency-manager/src/api/: manager.rs
dependency-test/src/: main.f
distributed-compiler/: .env  Cargo.toml
distributed-compiler/src/: io.rs  lib.rs  main.rs  net.rs  worker.rs
documentation/: book.toml
documentation/src/: SUMMARY.md
documentation/src/concepts/: 0_language_concepts.md  1_primitives.md  2_variables.md  3_functions.md  4_logic_gates_and_cmp.md  5_control_flow_statements.md  6_traits_impls.md  8_hello_world.md  9_compiler_instructions.md
documentation/src/introduction/: 0_main.md  1_introduction.md  2_getting_started.md  3_hello_world.md
documentation/src/project_management/: 0_project_management.md  1_project_configuration.md  2_linking_and_building_process.md
fog-lib/: Cargo.toml
fog-lib/src/: lib.rs
fog-syntax/: CHANGELOG.md  fog_src.f  package.json
fog-syntax/syntaxes/: Fog.tmLanguage.json
fog_distributed_compiler/: Cargo.toml  README.md
fog_distributed_compiler/src/: io.rs  lib.rs  main.rs  worker.rs
fog_lib/: Cargo.toml
fog_lib/src/: lib.rs
language-crates/codegen/: Cargo.toml  build.rs  input_ir.dbg
language-crates/codegen/src/: allocate.rs  debug.rs  import.rs  irgen.rs  lib.rs  pointer.rs
language-crates/common/: Cargo.toml
language-crates/common/src/: codegen.rs  compiler.rs  dependency.rs  distributed_compiler.rs  lib.rs  linker.rs  parser.rs  tokenizer.rs  ty.rs
language-crates/common/src/error/: application.rs  codegen.rs  dependency.rs  linker.rs  mod.rs  parser.rs  syntax.rs
language-crates/compiler/: Cargo.toml
language-crates/compiler/src/: lib.rs
language-crates/fog/: Cargo.toml
language-crates/fog/src/: cli.rs  main.rs
language-crates/imports/: Cargo.toml
language-crates/imports/src/: analyzer.rs  dependency_analyzer.rs  dependency_list_manager.rs  lib.rs  list_manager.rs  requester.rs
language-crates/linker/: Cargo.toml
language-crates/linker/src/: lib.rs  main.rs
language-crates/parser/: Cargo.toml
language-crates/parser/src/: parser_instance.rs  tokenizer.rs
language/codegen/: Cargo.toml  build.rs  input_ir.dbg
language/codegen/src/: allocate.rs  debug.rs  import.rs  irgen.rs  lib.rs  pointer.rs
language/common/: Cargo.toml
language/common/src/: codegen.rs  compiler.rs  compression.rs  dependency.rs  dependency_manager.rs  distributed_compiler.rs  imports.rs  lib.rs  linker.rs  parser.rs  tokenizer.rs  ty.rs
language/common/src/error/: application.rs  codegen.rs  dependency.rs  dependency_manager.rs  linker.rs  mod.rs  parser.rs  syntax.rs
language/common/src/parser/: common.rs  dbg.rs  function.rs  import.rs  mod.rs  statement.rs  statements.rs  ty.rs  value.rs  variable.rs
language/common/src/parser/statements/: conditionals.rs  function_call.rs  loops.rs  mod.rs  variable_declaration.rs  variables.rs
language/compiler/: Cargo.toml
language/compiler/src/: lib.rs
language/fog/: Cargo.toml
language/fog/src/: cli.rs  main.rs
language/imports/: Cargo.toml
language/imports/src/: analyzer.rs  lib.rs  list_manager.rs  requester.rs
language/linker/: Cargo.toml
language/linker/src/: lib.rs  main.rs
language/parser/: Cargo.toml
language/parser/src/: lib.rs  parser.rs  parser_instance.rs  tokenizer.rs
lsp/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
lsp/.cargo/: config.toml
lsp/client/: package.json  pnpm-lock.yaml
lsp/client/src/: extension.ts
lsp/examples/: basic.nrs  index.rs
lsp/src/: completion.rs  main.rs  nrs_lang.rs  semantic_analyze.rs  semantic_token.rs  symbol_table.rs
parser_tester/: config.toml
parser_tester/src/: main.f
src/: app.rs  lib.rs  main.rs  test.rs
src/app/: mod.rs
src/app/cli_parser/: cli_parser.rs  mod.rs
src/app/code_parser/: code_parser.rs  mod.rs
src/app/codegen/: codegen.rs  error.rs  mod.rs
src/app/compiler/: compiler.rs  file_ingest.rs  mod.rs
src/app/linking/: linker.rs  mod.rs
src/app/parser/: error.rs  mod.rs  parse_functions.rs  parser.rs  tokenizer.rs  tokens.rs  types.rs
src/app/standard_lib/: lib.rs
src/app/type_system/: mod.rs  type_system.rs
syntax-highlighter/: fog_src.f  package.json
syntax-highlighter/syntaxes/: Fog.tmLanguage.json
test_project/: config.toml  sample.f  test.f
test_project/output/: test_project.ll
test_project/projekt/: config.toml
test_project/projekt/output/: project.ll
test_project/remote_compile/dependency-test/: config.toml
test_project/src/: issue.f  main.f  masikmain.f
(+8 files in other folders)
