[workspace]
resolver = "3"
default-members = ["language-crates/fog"]
members = ["language-crates/codegen", "language-crates/common", "language-crates/fog", "language-crates/compiler", "language-crates/linker", "language-crates/imports", "language-crates/parser", "lsp"]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
