[workspace]
resolver = "3"
default-members = ["language/fog"]
members = ["language/codegen", "language/common", "language/fog", "language/compiler", "language/linker", "language/imports", "language/parser", "lsp", "benchmark", "distributed-compiler", "dependency-manager"]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
debug = true