[package]
name = "dependency-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../language/common" }
axum = "0.8.7"
diesel = { version = "2.3.4", features = ["postgres", "chrono", "r2d2"] }
dioxus = "0.7.1"
r2d2 = "0.8.10"
env_logger = "0.11.8"
chrono = {version = "0.4.42", features = ["serde"]}
zip = "6.0.0"
rmp-serde = "1.3.0"
serde = "1.0.228"
flate2 = "1.1.5"
