[package]
name = "fog-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0", "target-x86"], default-features = false }
libc = {default-features = false, version = "0.2.172"}

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
