[package]
name = "fog_distributed_compiler"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
fog-common = { path = "../language-crates/common" }
tokio = { version = "1.48.0", features = ["full"] }
ratatui = { version = "0.28.0", features = ["all-widgets", "crossterm"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
