[package]
name = "fog_lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
libc = {default-features = false, version = "0.2.172"}
windows-sys = {version = "0.60.2", features = ["Win32_System_Threading"]}

[profile.release]
panic = "abort"
opt-level = "s"

[profile.dev]
panic = "abort"

[features]
std = []
