[package]
name = "common"
version = "0.1.0"
edition = "2024"
description = "Common utilities and types for the Fog programming language ecosystem"

[dependencies]
anyhow = {version = "1.0.100", features = ["backtrace"]}
strum = {version = "0.27.2", features = ["derive"]}
strum_macros = "0.27.2"
serde = { version = "1.0.228", features = ["derive"]}

# Migrate to LLVM 21-1 
inkwell = { version = "0.7.1", features = ["llvm18-1", "target-x86"], default-features = false }

num = "0.4.3"
thiserror = "2.0.12"
indexmap = "2.9.0"
toml = "0.9.8"
semver = { version = "1.0.27", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
parking_lot = "0.12.5"
dotenvy = "0.15.7"
reqwest = {version = "0.12.24", features = ["blocking"]}
chrono = { version = "0.4.42", features = ["serde"] }
zip = "6.0.0"
rmp-serde = "1.3.0"
serde_json = "1.0.145"
flate2 = "1.1.5"