[package]
name = "common"
version = "0.1.0"
edition = "2024"
description = "Common utilities and types for the Fog programming language ecosystem"

[dependencies]
# Migrate to LLVM 21-1 
inkwell = { version = "0.7.1", features = ["llvm18-1", "target-x86"], default-features = false }
anyhow = {version = "1.0.100", features = ["backtrace"]}

parking_lot = "0.12.5"
num = "0.4.3"
indexmap = "2.9.0"
thiserror = "2.0.12"

semver = { version = "1.0.27", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
dotenvy = "0.15.7"

strum_macros = "0.27.2"
strum = {version = "0.27.2", features = ["derive"]}
serde = { version = "1.0.228", features = ["derive"]}
toml = "0.9.8"
rmp-serde = "1.3.0"
serde_json = "1.0.145"
flate2 = "1.1.5"
zip = "6.0.0"

axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = {version = "0.12.24", features = ["blocking"]}
chrono = { version = "0.4.42", features = ["serde"] }