[package]
name = "fog"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
common = { path = "../common" }
compiler = { path = "../compiler" }
imports = { path = "../imports" }
linker = { path = "../linker" }
serde = "1.0.228"
strum = {version = "0.27.2", features = ["derive"]}
strum_macros = "0.27.2"
